--- a/dev/cnf/build.gradle
+++ b/dev/cnf/build.gradle
@@ -220,7 +220,9 @@ task createGradleBootstrap {
         def depsList = []
         gradleBndProjects.each { projectName ->
             def bndProject = bndWorkspace.getProject(projectName)
-            if (!bndProject.isNoBundles()) {
+            // If the project doesn't have any bundles or if the bundles are not
+            // released, then skip the project
+            if (!bndProject.isNoBundles() && !bndProject.get('-releaserepo').isEmpty()) {
                 String org
                 if ('true'.equals(bndProject.get('test.project', bndProject.get('fat.project', 'false')))) {
                     org = 'test'
