SpringBoot test application cleanup
- Switch from using `apply plugin` to putting the plugins into `plugins`
- Remove `bootJar` config from build.gradle files where a war is built
- Remove `jar` being disabled in build.gradle and put it into
spring.gradle like what is done to disable `war`.
- Switch to using version 1.1.7 of the dependency-management plugin
- Clean up sv usage where it was commented out
- Update to not specify `java` plugin if the `war` plugin is specified

--- a/dev/com.ibm.ws.springboot.fat20.validation.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.fat20.validation.app/build.gradle
@@ -12,6 +12,7 @@
 plugins {
   id 'org.springframework.boot' version '3.5.3'
   id 'war'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
 
 apply from: '../wlp-gradle/subprojects/springboot2.gradle'
@@ -29,12 +30,4 @@ dependencies {
     exclude group: 'org.hibernate.validator', module: 'hibernate-validator'
   }
   compileOnly 'jakarta.validation:jakarta.validation-api'
-}
-
-bootJar {
-  duplicatesStrategy = 'warn'
-}
-
-jar {
-  enabled = false
 }
