--- a/dev/com.ibm.ws.springboot.fat20.aop.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.fat20.aop.app/build.gradle
@@ -11,6 +11,7 @@
 plugins {
   id 'org.springframework.boot' version '3.5.3'
   id 'war'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
 apply from: '../wlp-gradle/subprojects/springboot2.gradle'
 
@@ -25,14 +26,4 @@ dependencies {
   implementation('org.springframework.boot:spring-boot-starter-aop')
   implementation('org.aspectj:aspectjweaver:1.9.24')
   providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'
-}
-
-bootJar {
-  duplicatesStrategy = 'warn'
-}
-
-// Disable jar because it would need a dependency on ':com.ibm.ws.springboot.fat20.jms.app:module:compileTestJava' and 
-// ':com.ibm.ws.springboot.fat20.jms.app:module:processTestResources' which seems silly since we don't actually need a jar for this project.  We only need the war.
-jar {
-  enabled = false
 }
