--- a/dev/com.ibm.ws.springboot.fat20.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.fat20.app/build.gradle
@@ -13,6 +13,7 @@
 
 plugins {
   id 'org.springframework.boot' version '3.5.3'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
 apply from: '../wlp-gradle/subprojects/springboot2.gradle'
 def sv = springVersions[ '2.0' ]
