--- a/dev/com.ibm.ws.springboot.fat20.data.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.fat20.data.app/build.gradle
@@ -12,6 +12,7 @@
 plugins {
   id 'org.springframework.boot' version '3.5.3'
   id 'war'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
 apply from: '../wlp-gradle/subprojects/springboot2.gradle'
 
@@ -29,12 +30,4 @@ dependencies {
   providedCompile 'org.hibernate:hibernate-core'
   providedCompile 'jakarta.transaction:jakarta.transaction-api'
   providedCompile 'jakarta.persistence:jakarta.persistence-api'
-}
-
-bootJar {
-  duplicatesStrategy = 'warn'
-}
-
-jar {
-  enabled = false
 }
