--- a/dev/com.ibm.ws.springboot.fat20.programmatic.trans.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.fat20.programmatic.trans.app/build.gradle
@@ -12,6 +12,7 @@
 plugins {
   id 'org.springframework.boot' version '3.5.3'
   id 'war'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
 apply from: '../wlp-gradle/subprojects/springboot2.gradle'
 
@@ -26,14 +27,4 @@ dependencies {
   implementation('org.springframework.boot:spring-boot-starter-jdbc')
 
   providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'
-}
-
-bootJar {
-  duplicatesStrategy = 'warn'
-}
-
-// Disable jar because it would need a dependency on ':com.ibm.ws.springboot.fat20.war.app:module:compileTestJava' and 
-// ':com.ibm.ws.springboot.fat20.war.app:module:processTestResources' which seems silly since we don't actually need a jar for this project.  We only need the war.
-jar {
-  enabled = false
 }
