--- a/dev/com.ibm.ws.springboot.fat20.war.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.fat20.war.app/build.gradle
@@ -14,6 +14,7 @@
 plugins {
   id 'org.springframework.boot' version '3.5.3'
   id 'war'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
 apply from: '../wlp-gradle/subprojects/springboot2.gradle'
 
@@ -48,10 +49,4 @@ dependencies {
   providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'
   providedCompile 'javax.servlet:jstl'
   providedCompile 'org.apache.tomcat.embed:tomcat-embed-jasper'
-}
-
-// Disable jar because it would need a dependency on ':com.ibm.ws.springboot.fat20.war.app:module:compileTestJava' and 
-// ':com.ibm.ws.springboot.fat20.war.app:module:processTestResources' which seems silly since we don't actually need a jar for this project.  We only need the war.
-jar {
-  enabled = false
 }
