--- a/dev/com.ibm.ws.springboot.fat20.webflux.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.fat20.webflux.app/build.gradle
@@ -13,10 +13,10 @@
 
 plugins {
   id 'org.springframework.boot' version '3.5.3'
+  id 'java'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
 apply from: '../wlp-gradle/subprojects/springboot2.gradle'
-
-apply plugin: 'java'
 
 group = 'com.ibm.ws.example.spring'
 version = '0.0.1-SNAPSHOT'
