--- a/dev/com.ibm.ws.springboot.fat20.websocket.app/build.gradle
+++ b/dev/com.ibm.ws.springboot.fat20.websocket.app/build.gradle
@@ -13,11 +13,11 @@
 
 plugins {
   id 'org.springframework.boot' version '3.5.3'
+  id 'java'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
 apply from: '../wlp-gradle/subprojects/springboot2.gradle'
 def sv = springVersions[ '2.0' ]
-
-apply plugin: 'java'
 
 group = 'com.ibm.ws.example.spring'
 version = '0.0.1-SNAPSHOT'
