--- a/dev/io.openliberty.checkpoint.springboot.fat30.app/build.gradle
+++ b/dev/io.openliberty.checkpoint.springboot.fat30.app/build.gradle
@@ -13,10 +13,9 @@
 
 plugins {
   id 'org.springframework.boot' version '3.5.3'
+  id 'java'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
-
-apply plugin: 'java'
-apply plugin: 'io.spring.dependency-management'
 
 group = 'io.openliberty.example.spring'
 version = '0.0.1-SNAPSHOT'
