--- a/dev/io.openliberty.springboot.fat30.transactions.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat30.transactions.app/build.gradle
@@ -12,11 +12,9 @@
 plugins {
   id 'org.springframework.boot' version '3.5.3'
   id 'war'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
 apply from: '../wlp-gradle/subprojects/spring.gradle'
-def sv = springVersions[ '2.0' ]
-
-apply plugin: 'io.spring.dependency-management'
 
 group = 'com.ibm.ws.example.spring'
 version = '0.0.1-SNAPSHOT'
@@ -30,14 +28,5 @@ dependencies {
   implementation('org.springframework.boot:spring-boot-starter-web')
   implementation('org.springframework.boot:spring-boot-starter-jdbc')
 
-  providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'}
-
-bootJar {
-  duplicatesStrategy = 'warn'
-}
-
-// Disable jar because it would need a dependency on ':com.ibm.ws.springboot.fat20.war.app:module:compileTestJava' and 
-// ':com.ibm.ws.springboot.fat20.war.app:module:processTestResources' which seems silly since we don't actually need a jar for this project.  We only need the war.
-jar {
-  enabled = false
+  providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'
 }
