--- a/dev/io.openliberty.springboot.fat30.websocket.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat30.websocket.app/build.gradle
@@ -15,11 +15,9 @@
 plugins {
   id 'org.springframework.boot' version '3.5.3'
   id 'war'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
 apply from: '../wlp-gradle/subprojects/spring.gradle'
-
-apply plugin: 'java'
-apply plugin: 'io.spring.dependency-management'
 
 group = 'io.openliberty.example.spring'
 version = '0.0.1-SNAPSHOT'
