--- a/dev/io.openliberty.springboot.fat40.data.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat40.data.app/build.gradle
@@ -12,11 +12,10 @@
 plugins {
   id 'org.springframework.boot' version '4.0.0-M3'
   id 'war'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
 
 apply from: '../wlp-gradle/subprojects/spring.gradle'
-
-apply plugin: 'io.spring.dependency-management'
 
 group = 'com.ibm.ws.example.spring'
 version = '0.0.1-SNAPSHOT'
@@ -40,12 +39,4 @@ dependencies {
   providedCompile 'org.hibernate.orm:hibernate-core:7.1.0.Final'
   providedCompile 'jakarta.transaction:jakarta.transaction-api'
   providedCompile 'jakarta.persistence:jakarta.persistence-api'
-}
-
-bootJar {
-  duplicatesStrategy = 'warn'
-}
-
-jar {
-  enabled = false
 }
