--- a/dev/io.openliberty.springboot.fat40.war.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat40.war.app/build.gradle
@@ -15,10 +15,9 @@
 plugins {
   id 'org.springframework.boot' version '4.0.0-M3'
   id 'war'
+  id 'io.spring.dependency-management' version '1.1.7'
 }
 apply from: '../wlp-gradle/subprojects/spring.gradle'
-
-apply plugin: 'io.spring.dependency-management'
 
 group = 'io.openliberty.example.spring'
 version = '0.0.1-SNAPSHOT'
@@ -35,8 +34,4 @@ dependencies {
   providedCompile 'org.springframework.boot:spring-boot-starter-tomcat'
   //providedCompile 'jakarta.servlet.jsp.jstl:jakarta.servlet.jsp.jstl-api'
   //providedCompile 'org.apache.tomcat.embed:tomcat-embed-jasper'
-}
-
-jar {
-  enabled = false
 }
