--- a/dev/io.openliberty.springboot.fat40.data.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat40.data.app/build.gradle
@@ -10,7 +10,7 @@
  ********************************************************************************/
 
 plugins {
-  id 'org.springframework.boot' version '4.0.0-M3'
+  id 'org.springframework.boot' version '4.0.0-RC1'
   id 'war'
   id 'io.spring.dependency-management' version '1.1.7'
 }
@@ -30,12 +30,7 @@ dependencies {
   implementation('org.springframework.boot:spring-boot-starter-data-jpa')
   implementation('org.hibernate.orm:hibernate-community-dialects:7.1.0.Final')
   runtimeOnly 'com.h2database:h2'
-  // Should use spring-boot-starter-tomcat as provideCompile, but gradle plugin
-  // is putting too much in lib-provided: see https://github.com/spring-gradle-plugins/dependency-management-plugin/issues/409
-  // providedCompile('org.springframework.boot:spring-boot-starter-tomcat')
-  providedRuntime('org.apache.tomcat.embed:tomcat-embed-core')
-  providedRuntime('org.apache.tomcat.embed:tomcat-embed-el')
-  providedRuntime('org.apache.tomcat.embed:tomcat-embed-websocket')
+  providedRuntime('org.springframework.boot:spring-boot-tomcat-runtime')
   providedCompile 'org.hibernate.orm:hibernate-core:7.1.0.Final'
   providedCompile 'jakarta.transaction:jakarta.transaction-api'
   providedCompile 'jakarta.persistence:jakarta.persistence-api'
