--- a/dev/io.openliberty.springboot.fat40.jms.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat40.jms.app/build.gradle
@@ -10,7 +10,7 @@
  ********************************************************************************/
 
 plugins {
-  id 'org.springframework.boot' version '4.0.0-M3'
+  id 'org.springframework.boot' version '4.0.0-RC1'
   id 'war'
   id 'io.spring.dependency-management' version '1.1.7'
 }
@@ -31,10 +31,5 @@ dependencies {
   implementation('org.springframework.integration:spring-integration-jms')
   implementation('org.springframework.boot:spring-boot-starter-jdbc')
   providedCompile('jakarta.jms:jakarta.jms-api:3.1.0')
-  // Should use spring-boot-starter-tomcat as provideCompile, but gradle plugin
-  // is putting too much in lib-provided: see https://github.com/spring-gradle-plugins/dependency-management-plugin/issues/409
-  // providedCompile('org.springframework.boot:spring-boot-starter-tomcat')
-  providedRuntime('org.apache.tomcat.embed:tomcat-embed-core')
-  providedRuntime('org.apache.tomcat.embed:tomcat-embed-el')
-  providedRuntime('org.apache.tomcat.embed:tomcat-embed-websocket')
+  providedRuntime('org.springframework.boot:spring-boot-tomcat-runtime')
 }
