--- a/dev/build.image/publish/wlp/security/FIPS140-3-Liberty.properties
+++ b/dev/build.image/publish/wlp/security/FIPS140-3-Liberty.properties
@@ -25,4 +25,38 @@ RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.12 = io.openli
 RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.13 = io.openliberty.PLACEHOLDER
 RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.14 = io.openliberty.PLACEHOLDER
 RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.15 = io.openliberty.PLACEHOLDER
-
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.16 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.17 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.18 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.19 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.20 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.21 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.22 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.23 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.24 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.25 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.26 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.27 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.28 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.29 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.30 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.31 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.32 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.33 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.34 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.35 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.36 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.37 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.38 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.39 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.40 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.41 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.42 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.43 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.44 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.45 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.46 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.47 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.48 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.49 = io.openliberty.PLACEHOLDER
+RestrictedSecurity.OpenJCEPlusFIPS.FIPS140-3-Liberty.jce.provider.50 = io.openliberty.PLACEHOLDER
