--- a/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
+++ b/dev/cnf/dependabot/check_this_in_if_it_changes/pom.xml
@@ -2318,13 +2318,38 @@
     </dependency>
     <dependency>
       <groupId>org.apache.derby</groupId>
+      <artifactId>derby</artifactId>
+      <version>10.16.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
       <artifactId>derbyclient</artifactId>
       <version>10.11.1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.derby</groupId>
+      <artifactId>derbyclient</artifactId>
+      <version>10.16.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
       <artifactId>derbynet</artifactId>
       <version>10.11.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derbynet</artifactId>
+      <version>10.16.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derbyshared</artifactId>
+      <version>10.16.1.1</version>
+    </dependency>
+    <dependency>
+      <groupId>org.apache.derby</groupId>
+      <artifactId>derbytools</artifactId>
+      <version>10.16.1.1</version>
     </dependency>
     <dependency>
       <groupId>org.apache.directory.server</groupId>
