rename opensaml bundles (#33324)

--- a/dev/io.openliberty.org.opensaml.opensaml.core/build.gradle
+++ b/dev/io.openliberty.org.opensaml.opensaml.core/build.gradle
@@ -16,11 +16,12 @@ configurations {
 }
 
 dependencies {
-    opensaml 'org.opensaml:opensaml-messaging-api:3.4.5'
+    opensaml 'io.openliberty.org.opensaml:opensaml-core:4.3.2.1'
 }
 
 task extractInjectedClasses(type: Copy) {
    from zipTree(configurations.opensaml[0])
+   include "org/opensaml/core/config/Configuration.class"
    into compileJava.destinationDirectory
 }
 
