--- a/dev/io.openliberty.org.opensaml.opensaml.messaging.api/build.gradle
+++ b/dev/io.openliberty.org.opensaml.opensaml.messaging.api/build.gradle
@@ -16,12 +16,11 @@ configurations {
 }
 
 dependencies {
-    opensaml 'io.openliberty.org.opensaml:opensaml-core:4.3.2.1'
+    opensaml 'io.openliberty.org.opensaml:opensaml-messaging-api:4.3.2.1'
 }
 
 task extractInjectedClasses(type: Copy) {
    from zipTree(configurations.opensaml[0])
-   include "org/opensaml/core/config/Configuration.class"
    into compileJava.destinationDirectory
 }
 
