--- a/dev/com.ibm.ws.security.utility_fat/.project
+++ b/dev/com.ibm.ws.security.utility_fat/.project
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <projectDescription>
-	<name>com.ibm.ws.security.utility_fat_one</name>
+	<name>com.ibm.ws.security.utility_fat</name>
 	<comment></comment>
 	<projects>
                 <project>com.ibm.ws.security.client_fat</project>
