fix PH68424 version upgrade of javaMail

--- a/dev/io.openliberty.mail.2.0.internal_fat/build.gradle
+++ b/dev/io.openliberty.mail.2.0.internal_fat/build.gradle
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2017, 2024 IBM Corporation and others.
+ * Copyright (c) 2017, 2025 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -20,7 +20,7 @@ configurations {
 /* Define greenmail dependencies */
 dependencies {
   requiredLibs project(':com.ibm.ws.org.slf4j.jdk14'),
-               'com.sun.mail:jakarta.mail:2.0.0-RC6',
+               'com.sun.mail:jakarta.mail:2.0.2',
                'com.ibm.ws.org.apache.yoko:yoko-spec-corba:1.5.+',
                'com.ibm.ws.com.icegreen:greenmail:2.0.0.fd826131f671b0d3230b0d0e1638d8c4'
 }
