--- a/dev/com.ibm.ws.javamail.1.6_fat/build.gradle
+++ b/dev/com.ibm.ws.javamail.1.6_fat/build.gradle
@@ -1,5 +1,5 @@
 /*******************************************************************************
- * Copyright (c) 2017, 2024 IBM Corporation and others.
+ * Copyright (c) 2017, 2025 IBM Corporation and others.
  * All rights reserved. This program and the accompanying materials
  * are made available under the terms of the Eclipse Public License 2.0
  * which accompanies this distribution, and is available at
@@ -21,7 +21,7 @@ configurations {
 dependencies {
   requiredLibs 'com.icegreen:greenmail:1.5.10',
                project(':com.ibm.ws.org.slf4j.jdk14'),
-               'com.sun.mail:javax.mail:1.6.2',
+               'com.sun.mail:jakarta.mail:1.6.8',
                // Deps needed for when running on Java 9 (EE-type APIs were removed from JDK)
                'com.ibm.ws.org.apache.yoko:yoko-spec-corba:1.5.+',
                'javax.xml.bind:jaxb-api:2.2.+',
