--- a/dev/io.openliberty.springboot.fat40.http.contextroot.app/build.gradle
+++ b/dev/io.openliberty.springboot.fat40.http.contextroot.app/build.gradle
@@ -17,6 +17,8 @@ plugins {
   id 'io.spring.dependency-management' version '1.1.7'
 }
 
+apply from: '../wlp-gradle/subprojects/spring.gradle'
+
 group = 'com.ibm.ws.example.spring'
 version = '0.0.1-SNAPSHOT'
 java {
