Get Eclipse building clean again
- Update .classpath files to use bnd classpath container and remove
references to specific projects and rely on the projects in bnd.bnd
- Update .classpath files to use bin instead of build/classes
- Update to reference the specific Java version in the .classpath
- Add missing src directory in .classpath
- Add missing bndbuilder from .project files
- Remove leftover .project file from deleted project
- Remove project references from .project file and only rely on
bndbuilder for dependencies
- Update so that we only pick up from ${bin} when using gradle since the
files aren't there with eclipse due to extracting of the file in
build.gradle
- Move class to the correct directory structure for it package name

--- a/dev/com.ibm.ws.security.utility_fat/.project
+++ b/dev/com.ibm.ws.security.utility_fat/.project
@@ -3,10 +3,6 @@
 	<name>com.ibm.ws.security.utility_fat</name>
 	<comment></comment>
 	<projects>
-                <project>com.ibm.ws.security.client_fat</project>
-	</projects>
-	<projects>
-                <project>com.ibm.ws.crypto.sample.customencryption</project>
 	</projects>
 	<buildSpec>
 		<buildCommand>
@@ -14,8 +10,14 @@
 			<arguments>
 			</arguments>
 		</buildCommand>
+		<buildCommand>
+			<name>bndtools.core.bndbuilder</name>
+			<arguments>
+			</arguments>
+		</buildCommand>
 	</buildSpec>
 	<natures>
 		<nature>org.eclipse.jdt.core.javanature</nature>
+		<nature>bndtools.core.bndnature</nature>
 	</natures>
 </projectDescription>
