--- a/dev/com.ibm.ws.logstash.collector_fat/publish/servers/LibertyHPELServer/bootstrap.properties
+++ b/dev/com.ibm.ws.logstash.collector_fat/publish/servers/LibertyHPELServer/bootstrap.properties
@@ -1,3 +1,3 @@
 websphere.log.provider=binaryLogging-1.0
 bootstrap.include=../testports.properties
-com.ibm.ws.logging.trace.specification=com.ibm.logs.TraceServlet=fine:logstashCollector=all
+com.ibm.ws.logging.trace.specification=com.ibm.logs.TraceServlet=fine
