--- a/dev/cnf/resources/bnd/liberty-release.props
+++ b/dev/cnf/resources/bnd/liberty-release.props
@@ -13,13 +13,13 @@
 
 releaseTypeGA=true
 
-libertyBaseVersion=25.0.0
-libertyFixpackVersion=12
+libertyBaseVersion=26.0.0
+libertyFixpackVersion=1
 libertyServiceVersion=${libertyBaseVersion}.${libertyFixpackVersion}
-libertyBetaVersion=2025.12.0.0
+libertyBetaVersion=2026.1.0.0
 libertyRelease=${if;${releaseTypeGA};${libertyServiceVersion};${libertyBetaVersion}}
 
-libertyBundleMicroVersion=108
+libertyBundleMicroVersion=109
 copyrightBuildYear=2025
 buildID=${libertyRelease}-${def;buildLabel}
 productEdition=BASE_ILAN
