Add channel logging

--- a/dev/com.ibm.ws.jsp.2.3_fat/publish/servers/ignoreWriteAfterCommitServer/bootstrap.properties
+++ b/dev/com.ibm.ws.jsp.2.3_fat/publish/servers/ignoreWriteAfterCommitServer/bootstrap.properties
@@ -9,3 +9,4 @@
 ###############################################################################
 bootstrap.include=../testports.properties
 osgi.console=7777
+com.ibm.ws.logging.trace.specification=*=info:com.ibm.ws.webcontainer*=all:com.ibm.wsspi.webcontainer*=all:HTTPChannel=all:TCPChannel=all:GenericBNF=all:io.openliberty.netty*=all
